Fix nasty bugs and usability issues of csv-converter: - Remember settings. - Don't convert already converted document to utf8. - Don't ignore newline settings on export (and only export unix-nl).

BUG: 132462

svn path=/branches/koffice/1.6/koffice/; revision=623416